added gallery page

--- a/gallery_page/gallery.html
+++ b/gallery_page/gallery.html
@@ -29,6 +29,100 @@
             </ul>
         </nav>
     </div>
+    <section id="gallery-title">
+        <h1>Photo Speaks</h1>
+    </section>
+    <section id="gallery-container">
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/grid1.jpeg" class="pic pic-1">
+                <p>Fela with his facial arts</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/fela-on-stage.webp" class="pic pic-2">
+                <p>Performing on stage</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/grid3.jpg" class="pic pic-3">
+                <p>Gaming in his undergarment</p>
+            </div>
+        </div>
+        
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/kuti-wives-grid4.jpg" class="pic pic-1">
+                <p>Kuti and his wives</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/img5.jpg" class="pic pic-2">
+                <p>The New Afrka Shrine</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/felascar.jpg" class="pic pic-3">
+                <p>Fela's bathered car which he drove to a protest in Festac 77</p>
+            </div>
+        </div>
+
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/kalakuta3.jpg" class="pic pic-1">
+                <p>Fela and his family</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/Fela-and-his-Queens.jpg" class="pic pic-2">
+                <p>In his home</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/republic-grid3.webp" class="pic pic-3">
+                <p>His dancers with Sandra Izsadore(middle) who inspired his philosophy of Blackism</p>
+            </div>
+        </div>
+
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/grid8.jpeg" class="pic pic-1">
+                <p>Fela and his favourite Saxophone</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/grid9.jpeg" class="pic pic-2">
+                <p>Fela playing the Piano</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/seun.jpeg" class="pic pic-3">
+                <p>His youngest son, Seun Kuti who leads his father's former band</p>
+            </div>
+        </div>
+
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/funmilayo.jpg" class="pic pic-1">
+                <p>Funmilayo Ransome-Kuti, his mother(a teacher and a women's rights activist)</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/anikulapo2.jpg" class="pic pic-2">
+                <p>Live performance in Egypt</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/kalakuta.jpg" class="pic pic-3">
+                <p>Fela addressing the public</p>
+            </div>
+        </div>
+
+        <div class="img-line">
+            <div class="img-holder">
+                <img src="../Assets/Images/img17.jpeg" class="pic pic-1">
+                <p>Performance with his band</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/img18.jpeg" class="pic pic-2">
+                <p>Kuti performing live</p>
+            </div>
+            <div class="img-holder">
+                <img src="../Assets/Images/museum.jpg" class="pic pic-3">
+                <p>Kalakuta Museum in modern day</p>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <nav class="foot-nav">
