worked on songs page and its responsiveness

--- a/performance_page/performance.html
+++ b/performance_page/performance.html
@@ -29,6 +29,18 @@
             </ul>
         </nav>
     </div>
+    <section id="performance-video">
+        <div class="video-clips">
+        <div class="clip">
+            <video controls class="clip-1 clips"><source src="../Assets/Videos/zenith.mp4" type="video/mp4"></video>
+            <p>Fela Anikulapo-Kuti and Egypt 80 - Beasts Of No Nation, Live at the Zenith, Paris in 1984</p>
+        </div>
+        <div>
+            <video controls class="clip-2 clips"><source src="../Assets/Videos/intro.mp4" type="video/mp4"></video>
+            <p>Fela Anikulapo Kuti Live At The Shrine 1987 Introducing the show and yabbis</p>
+        </div>
+        </div>
+    </section>
 
     <footer>
         <nav class="foot-nav">
