--- a/song_page/songs.html
+++ b/song_page/songs.html
@@ -29,6 +29,119 @@
             </ul>
         </nav>
     </div>
+    <section id="platform">
+        <section id="search-bar">
+            <input type="search" placeholder="Enter music title or keyword">
+        </section>
+        <!-- songs -->
+        <section id="songs-container">
+            <div class="songs-line">
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+            </div>
+
+            <div class="songs-line">
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+            </div>
+
+            <div class="songs-line">
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+                <div class="song-holder">
+                    <div class="song-content">
+                        <h3>Title: Shakara</h3>
+                        <p>Album: Beast of No Nation</p>
+                        <p>YOP: 1995</p>
+                    </div>
+                    <audio src=""></audio>
+                </div>
+            </div>
+        </section>
+        <button>Show more</button>
+    </section>
     
     <footer>
         <nav class="foot-nav">
